Proof reading and some new diagrams

--- a/text/abbreviations.tex
+++ b/text/abbreviations.tex
@@ -21,6 +21,8 @@
 	\acro{2D}{two-dimensions}
 	\acro{3D}{three-dimensions}
 	\acro{HHG}{High Harmonic Generation}
+	\acro{QED}{Quantum Electro-Dynamics}
+	\acro{PIC}{Particle-In-Cell}
 	\acro{ZVP}{Zero Vector Potential}
 \end{acronym}
 
