--- a/text/ch1-intro.tex
+++ b/text/ch1-intro.tex
@@ -209,11 +209,11 @@ Smilei (for Simulating Matter Irradiated by Light at Extreme Intensities) is a m
 \subsubsection{Reference quantities}
 This needs rewording so as not to be the same as paper.
 
-With the vast range of magnitudes associated with multi-petawatt and femtosecond laser pulses, solid density plasmas, micrometre wavelengths and attosecond bunches, it is much more efficient to convert to dimensionless normalised quantities. The standard four that describe the dynamics of the system \cite{BOUCHARD THESIS??} correspond directly to each of these. The three asso- ciated with the laser are: the temporal parameter, ωLτ, where τ is the pulse duration, the spatial parameter, λL/R, where λL is the wavelength and R the beam width, and the intensity parameter, the normalised vector po- tential, a0 = eEL/(mecωL), where EL is the peak laser electric field strength, and e and me are the charge and mass of an electron.
-For the plasma, the key parameter is the density rel- ative to the critical density, n ̄e = ne/nc, here ne is the electron density and nc = ε0 me ωL2 /e2 is the critical den- sity at which the plasma becomes opaque to the laser electric field, assuming relativistic effects can be ignored.
-Relativistic similarity theory states that the laser- plasma interaction does not depend on n ̄e and a0 inde- pendently but via the relativistic similarity parameter
-S=n ̄e, (1) a0
-essentially accounting for relativistic effects in the over- density of the plasma. Previous work on the ZVP mech- anism has suggested that the ZVP regime is valid for relativistic interactions, a0 > 1, with S ≥ 1. For S < 1, the onset of relativistically self-induced transparency ef- fects [42] renders the model invalid. Equally, for large a0, the onset of QED effects should cause breakdown of rel- ativistic similarity. Here the validity of the ZVP model is tested across this parameter space for the first time.
+%With the vast range of magnitudes associated with multi-petawatt and femtosecond laser pulses, solid density plasmas, micrometre wavelengths and attosecond bunches, it is much more efficient to convert to dimensionless normalised quantities. The standard four that describe the dynamics of the system \cite{BOUCHARD THESIS??} correspond directly to each of these. The three asso- ciated with the laser are: the temporal parameter, ωLτ, where τ is the pulse duration, the spatial parameter, λL/R, where λL is the wavelength and R the beam width, and the intensity parameter, the normalised vector po- tential, a0 = eEL/(mecωL), where EL is the peak laser electric field strength, and e and me are the charge and mass of an electron.
+%For the plasma, the key parameter is the density rel- ative to the critical density, n ̄e = ne/nc, here ne is the electron density and nc = ε0 me ωL2 /e2 is the critical den- sity at which the plasma becomes opaque to the laser electric field, assuming relativistic effects can be ignored.
+%Relativistic similarity theory states that the laser- plasma interaction does not depend on n ̄e and a0 inde- pendently but via the relativistic similarity parameter
+%S=n ̄e, (1) a0
+%essentially accounting for relativistic effects in the over- density of the plasma. Previous work on the ZVP mech- anism has suggested that the ZVP regime is valid for relativistic interactions, a0 > 1, with S ≥ 1. For S < 1, the onset of relativistically self-induced transparency ef- fects [42] renders the model invalid. Equally, for large a0, the onset of QED effects should cause breakdown of rel- ativistic similarity. Here the validity of the ZVP model is tested across this parameter space for the first time.
 
 \subsubsection{Reference units}
 To great convenience, Smilei operates in normalised units. This normalisation is not chosen \textit{a priori}, instead results can be scaled by an arbitrary reference angular frequency. This is extremely useful when working with boosted frames of reference. As this thesis focuses on the interaction of a laser pulse with plasma, the laser pulse angular frequency, $\omega_\mathrm{L}$ is set as the frequency of reference. A list of the most common normalisations are given in table \ref{tab:intro-normalisations}.
