--- a/text/ch2-zvp.tex
+++ b/text/ch2-zvp.tex
@@ -1,42 +1,53 @@
 \chapter{\label{ch:2-zvp}The Zero Vector Potential Absorption Mechanism}
 
 \minitoc
+\section{Motivations and an overview}
+\textbf{**This is from paper cover letter and acts as an abstract for this chapter, I also need to go through and add citations**}
+
+Throughout the history of experimental science, light has been the primary tool for investigation. Through the creation of synchrotron radiation sources and more recently XFELs, electron bunches have been used to create increasingly specialised light sources for the study of matter of all kinds. At Diamond Light Source in the UK, electron beams have been used for a diverse range of studies from new drugs to ancient paintings, while at SLAC, the United States' forefront electron accelerator, common applications hail from many disciplines: science, medicine, industry and homeland security.  Hence, much research has been done to produce electron bunches with ever greater charge, energy and coherency. Multi-petawatt laser facilities are now available across the globe for the study of laser-plasma interactions at ever greater peak intensities. In the ultra-relativistic regime $a_0 \gg 1$, there is a novel method for high-charge electron bunch creation. Via relativistic effects, a laser pulse organises the electrons at the surface of a solid density plasma into coherent bunches, which are then ejected at high speeds. Those discussed in this thesis have properties rivalling those of forefront accelerators. The quality, charge and duration of the attosecond electron bunches described here would enable the study of the most fundamental interactions of our universe. While there has been some experimental evidence for attosecond electron bunches from intense laser-solid interactions, here is proposed a new mass-limited target setup to generate electron bunches with greater charge density. Such electron bunches are fully characterised using \ac{PIC} simulations to compare their quality to those of existing electron bunch production methods and their energies described via the Zero Vector Potential Mechanism. Their implications for laser to plasma energy absorption are also considered including at the onset of \ac{SF-QED} effects. 
+
+These results have excited the community to perform experiments to realise these electron bunches for the creation of ultra-bright X-ray pulses: having recently completed an experimental campaign at the ORION laser facility, studying high harmonic generation from such electron bunches, the author's proposal has been accepted to observe the electron bunches directly at the GEMINI PW laser at the Central Laser Facility, UK.
+
+This chapter is organised as follows. 
+
+\textbf{**I must add the chapter outline here**}
+
+
 
 \section{Introduction}
-Of primary interest in this thesis is the interaction of a relativistically intense short pulse laser interacting with a solid density plasma target with a sharp density gradient. Now is presented the Zero Vector Potential mechanism of attosecond absorption of laser pulse energy, proposed by \textit{Baeva et al} \cite{baevaTheoryHighorderHarmonic2006} and later developed by \textit{Savin et al} \cite{savinAttosecondscaleAbsorptionExtreme2017,savinEnergyAbsorptionLaserQED2019}. Laser energy absorption in dense plasmas was first proposed by Wilks and Kruer \cite{wilksAbsorptionUltraIntenseLaser1992}, a ponderomotive mechanism where plasma electrons are heated directly by the laser pulse via the so-called $\mathbf{J}\times \mathbf{B}$ force.
+Of primary interest in this thesis is the interaction of a relativistically intense short-pulse laser interacting with a solid density plasma target with a sharp density gradient. Now is presented an explanation of this interaction: the \ac{ZVP} mechanism of attosecond absorption of laser pulse energy, proposed by \textit{Baeva et al} \cite{baevaZeroVectorPotential2011} and later developed by \textit{Savin et al} \cite{savinAttosecondscaleAbsorptionExtreme2017,savinModellingLaserPlasmaInteractions2019}. Laser energy absorption in dense plasmas was first proposed by Wilks and Kruer \cite{wilksAbsorptionUltraIntenseLaser1992}, via a ponderomotive mechanism where plasma electrons are heated directly by the laser pulse via the so-called $\mathbf{J}\times \mathbf{B}$ force.
 
 %At some point I should briefly chat about other absorption models (I think at the end of the intro - this will also include the stuff above. - Then I will start this chapter by talking about the case where JxB does not apply. ALso in the intro specify that for an overdense plasma, the laser does not propagate and must be reflected and hence we are generally talking about a laser-plasma surface interaction and the implications thereof.) Before this point I also want to discuss preplasmas.
 
-This thesis focuses on the so-called `post-ponderomotive' regime where the frequency of the plasma oscillations ($\omega_p \sim \sqrt{n_e}$) are greater than the $\mathbf{J}\times \mathbf{B}$ induced plasma electron oscillations at $2\omega_L$. The plasma electrons are then fast enough to compensate the ponderomotive pressure of the laser pulse with the formation of electrostatic fields between electrons and ions and so respond adiabatically to the $\mathbf{J}\times \mathbf{B}$ force. Hence plasma electrons cannot be heated directly by the laser pulse. Note that this requires a sufficiently steep density gradient around the relativistic critical density surface (where $S=1$) to shift the main interaction to a region where this condition on the overdensity is satisfied. In this case the ponderomotive pressure of the laser compresses the electrons at the front surface of the plasma and so shifts the laser-plasma surface interaction to plasma densities well beyond the relativistic critical density, leaving behind a positive space charge. This electron-ion charge separation leads to the formation of a \textit{pseudo-capacitor} electrostatic field.
+This thesis is interested in the `post-ponderomotive' regime where the frequency of the relativistic plasma oscillations ($\omega_\mathrm{p} \sim \sqrt{S}$) are greater than the $\mathbf{J}\times \mathbf{B}$ induced plasma electron oscillations at $2\omega_\mathrm{L}$. The plasma electrons' response is then fast enough to compensate the ponderomotive pressure of the laser pulse with the formation of electrostatic fields between electrons and ions and so respond adiabatically to the applied $\mathbf{J}\times \mathbf{B}$ force. Hence, plasma electrons cannot be heated directly by the laser pulse. Interestingly, working through this condition suggests the criterion for the \ac{ZVP} regime is $S > 4$, slightly more constraining than $S>1$ as is typically stated for the \ac{ZVP} regime \cite{savinModellingLaserPlasmaInteractions2019}. The resolution comes from understanding the plasma response. The bulk plasma must have $S>1$ to prevent relativistic transparency and so ensure a laser-surface interaction. Then the ponderomotive pressure of the laser is able to compress the front surface to densities such that the overdensity condition is satisfied. Note that to neglect the pre-adiabatic formation phase requires a sufficiently steep density gradient around the relativistic critical density surface (where $S=1$) to shift the main interaction to a region where this condition on the overdensity is satisfied. Pre-plasma formation and scale length will be discussed in great detail in a later chapter.
 
+Provided all conditions are met, the ponderomotive pressure of the laser compresses the electrons at the front surface of the plasma and so shifts the laser-plasma surface interaction to plasma densities well beyond the relativistic critical density, leaving in its wake a positive space charge. This electron-ion charge separation leads to the formation of a \textit{pseudo-capacitor} electrostatic field. So we have entered a regime of adiabaticity where the plasma skin layer is confined within a potential well consisting of the ponderomotive pressure and the Coulomb potential of the pseudocapacitor field.
 
-Interestingly working through the condition between $\omega_p$ and $\omega_L$ in normalised units suggests the criterion for this regime is $S > 4$, slightly more constraining than $S>1$ as is typically stated \cite{savinModellingLaserPlasmaInteractions2019}.
-
-% at some point I must be explicitely clear about why this conditoin ad my sims with S=1 are compatible. This above criterion on S is associated with the bunch electrons. For S=1 we observe great compression of the target surface enabling us to enter the regime where the bunch S>4 whilst the bulk remains at S=1. Can thsi also be used to explain the energy absorption in phase one (bunch formation) ? Eneryg can be absorbed by JxB until the bunch density goes above some value???
-
-
-
-[Come back to this and write up stuff about actaully it being the relativistc frequncy and critical density surfaces that matter and how this does indeed put a stricter condition on the bulk S value]
-
-So we have entered a regime of adiabaticity where the plasma skin layer is confined within a potential well consisting of the ponderomotive pressure and the Coulomb potential. Consider a relativistic linearly polarised laser pulse obliquely incident, with an angle of incidence of $\theta$, on a semi-infinite plasma, existing for $x>0$. The Hamiltonian of a single electron confined within the potential well \cite{goldsteinClassicalMechanics2013} is
+To understand this system, consider now a relativistic linearly polarised laser pulse obliquely incident, at an angle of incidence $\theta$, on a semi-infinite plasma, existing for $x\ge0$ as in figure \ref{fig:zvpforcesppol}.
+% TODO: \usepackage{graphicx} required
+\begin{figure}
+	\centering
+	\includegraphics[width=0.7\linewidth]{figures/zvp/zvp_forces_ppol}
+	\caption[Diagram of a p-polarised laser pulse incident at angle $\theta$ specularly reflected from a solid density plasma.]{Diagram of a p-polarised laser pulse incident at angle $\theta$ specularly reflected from a solid density plasma. By considering the Lorentz force equation, it is clear that all forces and therefore all plasma particle dynamics are confined to a plane.}
+	\label{fig:zvpforcesppol}
+\end{figure}
+The Hamiltonian of a single electron confined within the potential well \cite{goldsteinClassicalMechanics2013} is
 \begin{equation}\label{eq:hamiltonian_general}
-	\mathcal{H} = c\sqrt{m^2_ec^2 + |\mathbf{p}|^2} - e\Phi.
+	\mathcal{H} = c\sqrt{m^2_\mathrm{e}c^2 + |\mathbf{p}|^2} - e\Phi.
 \end{equation}
-Here the first term is the electron energy, $U$, extracted from the invariant of the relativistic 4-momentum of the electron, $\mathbf{P^\mu} = (U/c, \mathbf{p})$,
+Here, the second term of equation \ref{eq:hamiltonian_general} describes the contribution to the electron's energy from the electrostatic potential, $\Phi$, of the pseudo-capacitor. The first term is the electron energy, $U$, extracted from the invariant of the relativistic 4-momentum of the electron, $\mathbf{P^\mu} = (U/c, \mathbf{p})$,
 \begin{equation}
-	\mathbf{P^\mu \cdot P_\mu} = \frac{U^2}{c^2} - |\mathbf{p}|^2 = m^2c^2.
+	\mathbf{P^\mu \cdot P_\mu} = \frac{U^2}{c^2} - |\mathbf{p}|^2 = m^2_\mathrm{e}c^2.
 \end{equation}
-Note that while there has been growing interest in the curvature of spacetime by relativistic lasers [cite edward here], for modern high power lasers this effect is small and not relevant for this thesis. Throughout the inner product of 4-vectors is defined with the Minkowski Metric. [find alex citation on pg 89 of thesis]
+Note that while there has been growing interest in the curvature of spacetime by relativistic lasers \textbf{[cite edward here]}, for modern high power lasers, this effect remains undetectable. Thus, throughout this thesis the inner product of 4-vectors is defined using the Minkowski Metric \cite{steaneRelativityMadeRelatively2012}.
 
-The second term of equation \ref{eq:hamiltonian_general} describes the contribution to the electron's energy from the electrostatic potential of the pseudo-capacitor. Decomposing the electron's 3-momentum into orthogonal components: $p_\mathrm{prop}$, along the laser propagation direction, $p_\mathrm{pol}$, along the polarisation axis of the laser pulse and $p_\perp$, perpendicular to both, two simplifications can be made. Firstly, by canonical conservation of transverse momentum, $p_\mathrm{pol} = eA$, where $A$ is the laser vector potential. Secondly, in the case of a $p$-polarised laser pulse (the known optimum for ZVP electron bunch generation), the forces at play confine the electron trajectory to the  $p_\mathrm{prop}$-$p_\mathrm{pol}$ plane and the interaction geometry is in essence \ac{2D}.
+Decomposing the electron's 3-momentum into orthogonal components: $p_\mathrm{prop}$, along the laser propagation direction, $p_\mathrm{pol}$, along the polarisation axis of the laser pulse and $p_\perp$, perpendicular to both, there are two simplifications to be made. Firstly, by canonical conservation of transverse momentum, $p_\mathrm{pol} = eA$, where $A$ is the laser vector potential amplitude. Secondly, in the case of a p-polarised laser pulse (the known optimum for ZVP electron bunch generation \cite{savinAttosecondscaleAbsorptionExtreme2017} and \ac{HHG} \cite{baevaTheoryHighorderHarmonic2006}), with reference to figure \ref{fig:zvpforcesppol} and the Lorentz force law, the forces at play confine the electron trajectory to the  $p_\mathrm{prop}$-$p_\mathrm{pol}$ plane and the essential interaction geometry is two-dimensional. This is provided one considers length scales much smaller than the focal spot of the laser pulse on the target thus pondermotive pressure is normal to the target surface.
 
-[include a diagram alluding to this?-it is basically since B is out of the plane and all other E fields are in the plane, also perhaps provide a foot not here to explain how incidentally this all provides a succinct explanation of why p is better?]
-
-Explicitly, the Hamiltonian is now
+Explicitly, the Hamiltonian can be written as
 \begin{equation}\label{eq:hamiltonian_specific}
 	\mathcal{H} = c\sqrt{m^2_ec^2 + p^2_\mathrm{prop} + e^2A^2} - e\Phi.
 \end{equation}
-From equation \ref{eq:hamiltonian_specific} it is clear that should the vector potential pass through zero, one of the walls of the potential well is suppressed, allowing electrons in the in the skin layer to escape the plasma, breaking adiabaticity. The necessity of vector potential zeros for this violent reconstruction of the plasma surface led Baeva et al \cite{baevaZeroVectorPotential2011} to coin the term `Zero Vector Potential' mechanism to describe this process. Indeed, while in standard calculations a laser pulse will exponentially decay within a skin layer without passing through zero, Baeva et al \cite{baevaZeroVectorPotential2011} were able to demonstrate in \ac{PIC} simulations that for this regime, zeros are able to propagate through the skin layer of the plasma. The explanation for this difference in mechanics relies on a Doppler shift in the laser field due to the relativistic motion of the ablating plasma surface, and the mathematical formalism of this process proceeds as follows.
+From equation \ref{eq:hamiltonian_specific} it is clear that should the vector potential pass through zero, one of the walls of the potential well is totally suppressed, allowing electrons in the skin layer to escape the plasma, breaking adiabaticity. The necessity of vector potential zeros for this violent reconstruction of the plasma surface led Baeva \textit{et al} \cite{baevaZeroVectorPotential2011} to coin the term `Zero Vector Potential' mechanism to describe this process. Indeed, while elementary electromagnetism tells us a laser pulse will exponentially decay within a skin layer of a plasma without passing through zero, Baeva \textit{et al} \cite{baevaZeroVectorPotential2011} were able to demonstrate in \ac{PIC} simulations that for this regime, zeros do exist and do propagate through the skin layer. The explanation relies on a Doppler shift in the laser field due to the relativistic motion of the ablating plasma surface, and the mathematical formalism of this process proceeds as follows.
 
 [I think before this point it would be good to enter in the language of electron bunches or sheaths - I will continue the dicussion assuming this concept has been introduced].
 
